fix text alignment in tooltip

--- a/packages/shared/css/tooltips.css
+++ b/packages/shared/css/tooltips.css
@@ -27,6 +27,7 @@
   display: inline-block;
   position: relative;
   z-index: 2;
+  text-align: left;
 }
 
 /* SLIDES */
